<resources>
    <string name="app_name">Roomie</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pick_option">Pick option</string>


    <string name="title_activity_home">HomeActivity</string>
    <string name="expenses">Expenses</string>
    <string name="notes">Notes</string>
    <string name="logout">Logout</string>
    <string name="title_activity_notes">NotesActivity</string>

    <string name="add_note">Add note</string>
    <string name="title_activity_add_note">Add Note</string>

    <string name="note">Note</string>
    <string name="title_activity_create_house">CreateHouseActivity</string>

    <string name="no_houses_registed">Looks like you have no registered house.</string>
    <string name="action_create_house">Create House</string>
    <string name="action_join_house">Join House</string>

    <string name="house_name">House Name</string>
    <string name="house_password">House Password</string>
    <string name="house_id">House ID</string>
    <string name="title_activity_login">Sign in</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_no_home">NoHome</string>
    <string name="title_activity_register_house">RegisterHouse</string>
    <string name="title_activity_join_house">JoinHouseActivity</string>
    <string name="title_activity_house_info">HouseInfoActivity</string>

    <!-- House Info Activity -->
    <string name="house_info_id">House ID:</string>
    <string name="house_info_name">House Name:</string>
    <string name="house_info_change_password">Change House Password</string>
    <string name="house_info_members">Members</string>
    <string name="house_info">House</string>
    <string name="leave_house">Leave House</string>

    <!-- Notes -->
    <string name="no_notes">No Notes :(</string>
    <string name="title_activity_new_note">NewNoteActivity</string>
    <string name="note_description">Note Description</string>
    <string name="title_activity_display_note">DisplayNoteActivity</string>
    <string name="created_by">Created by</string>
    <string name="last_updated">Last Updated</string>
    <string name="title_activity_edit_note">EditNoteActivity</string>
    <string name="edit_note">Edit Note</string>
    <string name="title_activity_settings">SettingsActivity</string>

</resources>
