<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_register" tools:context="pridexs.roomie.RegisterActivity">

    <LinearLayout android:layout_height="match_parent"
        android:layout_width="match_parent" android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/action_register"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/prompt_name"
            android:id="@+id/register_name"
            android:layout_centerVertical="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/register_emailAddress"
            android:hint="@string/prompt_email"
            android:layout_below="@+id/register_name" />


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/register_password"
            android:hint="@string/prompt_password"
            android:layout_below="@+id/register_emailAddress" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_confirm"
            android:text="@string/action_register"
            android:layout_below="@+id/register_password" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_cancel"
            android:text="@string/action_cancel"
            android:layout_below="@+id/register_confirm" />

    </LinearLayout>

</RelativeLayout>
