<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_new_note" tools:context="pridexs.roomie.NewNoteActivity">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_note"
        android:id="@+id/new_note_add"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_cancel"
        android:id="@+id/new_note_cancel"
        android:layout_below="@+id/new_note_add" />


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView_new_note"
        android:layout_alignParentStart="true"
        android:layout_below="@id/new_note_cancel">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/note_description"
                android:id="@+id/note_textView"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType="textMultiLine"
                android:maxLength="500"
                android:ems="10"
                android:id="@+id/note_description_text"
                android:layout_below="@+id/note_textView" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
